--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Elaheh</title>
+  <meta name="robots" content="noindex, nofollow">
   
   <!-- Vazirmatn Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
