--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
@@ -144,18 +143,18 @@
 <script type="importmap">
 {
   "imports": {
-    "rxjs": "https://esm.sh/rxjs@^7.8.2?conditions=es2015",
-    "rxjs/operators": "https://esm.sh/rxjs@^7.8.2/operators?conditions=es2015",
-    "rxjs/ajax": "https://esm.sh/rxjs@^7.8.2/ajax?conditions=es2015",
-    "rxjs/webSocket": "https://esm.sh/rxjs@^7.8.2/webSocket?conditions=es2015",
-    "rxjs/testing": "https://esm.sh/rxjs@^7.8.2/testing?conditions=es2015",
-    "rxjs/fetch": "https://esm.sh/rxjs@^7.8.2/fetch?conditions=es2015",
-    "@angular/compiler": "https://esm.sh/@angular/compiler@~18.0.0?external=rxjs",
-    "@angular/core": "https://esm.sh/@angular/core@~18.0.0?external=rxjs",
-    "@google/genai": "https://esm.sh/@google/genai@^1.39.0?external=rxjs",
-    "@angular/common": "https://esm.sh/@angular/common@~18.0.0?external=rxjs",
-    "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@~18.0.0?external=rxjs",
-    "@angular/forms": "https://esm.sh/@angular/forms@~18.0.0?external=rxjs",
+    "rxjs": "https://jspm.dev/npm:rxjs@7.8.1",
+    "rxjs/operators": "https://jspm.dev/npm:rxjs@7.8.1/operators",
+    "rxjs/ajax": "https://jspm.dev/npm:rxjs@7.8.1/ajax",
+    "rxjs/webSocket": "https://jspm.dev/npm:rxjs@7.8.1/webSocket",
+    "rxjs/testing": "https://jspm.dev/npm:rxjs@7.8.1/testing",
+    "rxjs/fetch": "https://jspm.dev/npm:rxjs@7.8.1/fetch",
+    "@angular/compiler": "https://jspm.dev/npm:@angular/compiler@18.0.0",
+    "@angular/core": "https://jspm.dev/npm:@angular/core@18.0.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
+    "@angular/common": "https://jspm.dev/npm:@angular/common@18.0.0",
+    "@angular/platform-browser": "https://jspm.dev/npm:@angular/platform-browser@18.0.0",
+    "@angular/forms": "https://jspm.dev/npm:@angular/forms@18.0.0",
     "qrcode": "https://esm.sh/qrcode@^1.5.3"
   }
 }
