--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Elaheh</title>
-  <meta name="robots" content="noindex, nofollow">
   
   <!-- Vazirmatn Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -143,18 +142,18 @@
 <script type="importmap">
 {
   "imports": {
-    "rxjs": "https://jspm.dev/npm:rxjs@7.8.1",
-    "rxjs/operators": "https://jspm.dev/npm:rxjs@7.8.1/operators",
-    "rxjs/ajax": "https://jspm.dev/npm:rxjs@7.8.1/ajax",
-    "rxjs/webSocket": "https://jspm.dev/npm:rxjs@7.8.1/webSocket",
-    "rxjs/testing": "https://jspm.dev/npm:rxjs@7.8.1/testing",
-    "rxjs/fetch": "https://jspm.dev/npm:rxjs@7.8.1/fetch",
-    "@angular/compiler": "https://jspm.dev/npm:@angular/compiler@18.0.0",
-    "@angular/core": "https://jspm.dev/npm:@angular/core@18.0.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
-    "@angular/common": "https://jspm.dev/npm:@angular/common@18.0.0",
-    "@angular/platform-browser": "https://jspm.dev/npm:@angular/platform-browser@18.0.0",
-    "@angular/forms": "https://jspm.dev/npm:@angular/forms@18.0.0",
+    "rxjs": "https://esm.sh/rxjs@^7.8.2?conditions=es2015",
+    "rxjs/operators": "https://esm.sh/rxjs@^7.8.2/operators?conditions=es2015",
+    "rxjs/ajax": "https://esm.sh/rxjs@^7.8.2/ajax?conditions=es2015",
+    "rxjs/webSocket": "https://esm.sh/rxjs@^7.8.2/webSocket?conditions=es2015",
+    "rxjs/testing": "https://esm.sh/rxjs@^7.8.2/testing?conditions=es2015",
+    "rxjs/fetch": "https://esm.sh/rxjs@^7.8.2/fetch?conditions=es2015",
+    "@angular/compiler": "https://esm.sh/@angular/compiler@^21.1.2?external=rxjs",
+    "@angular/core": "https://esm.sh/@angular/core@^21.1.2?external=rxjs",
+    "@google/genai": "https://esm.sh/@google/genai@^1.39.0?external=rxjs",
+    "@angular/common": "https://esm.sh/@angular/common@^21.1.2?external=rxjs",
+    "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^21.1.2?external=rxjs",
+    "@angular/forms": "https://esm.sh/@angular/forms@^21.1.2?external=rxjs",
     "qrcode": "https://esm.sh/qrcode@^1.5.3"
   }
 }
