--- a/index.html
+++ b/index.html
@@ -161,5 +161,6 @@
 </head>
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 overflow-hidden font-sans">
   <app-root></app-root>
+  <script type="module" src="index.tsx"></script>
 </body>
 </html>
