--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
 </head>
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 overflow-hidden font-sans">
   <app-root></app-root>
-  <script type="module" src="index.tsx"></script>
+  <script type="module" src="index.ts"></script>
 </body>
 </html>
